Final documentation written !
Separation made :
- Added a project folder (clean setup usable by developers)
- Added an example folder (working example to demonstrate how everything works)

All the parameters supported now have been explained in the README

Also added default values in the settings.json file

Signed-off-by: DavidMellul <david.mellul@outlook.fr>

--- a/project/settings.json
+++ b/project/settings.json
@@ -4,8 +4,8 @@
     "encoding": "utf-8"
   },
   "header_settings": {
-    "text": "Glossaire",
-    "font": "Segoe UI",
+    "text": "Glossary",
+    "font": "Arial",
     "size": 20,
     "formatting": [
       "bold"
@@ -18,7 +18,7 @@
     "alignment": "LEFT"
   },
   "word_settings": {
-    "font": "Segoe UI",
+    "font": "Arial",
     "size": 12,
     "formatting": [
       "bold"
@@ -30,7 +30,7 @@
     ]
   },
   "definition_settings": {
-    "font": "Segoe UI",
+    "font": "Arial",
     "size": 12,
     "color": [
       0,
